(fix): various fixes to the wallet and stripe integration

--- a/src/app/common/layout/v2-topbar/v2-topbar.component.html
+++ b/src/app/common/layout/v2-topbar/v2-topbar.component.html
@@ -26,7 +26,7 @@
   <a
     class="m-v2-topbarNav__Item m-v2-topbarNav__RouterNav"
     [routerLink]="
-      featuresService.has('wallet-v2') ? '/wallet/canary' : '/wallet'
+      featuresService.has('wallet-upgrade') ? '/wallet/canary' : '/wallet'
     "
     routerLinkActive="m-v2-topbarNav__Item--active"
     title="Wallet"
