--- a/src/app/modules/analytics/components/chart-v2/chart-v2.component.scss
+++ b/src/app/modules/analytics/components/chart-v2/chart-v2.component.scss
@@ -1,7 +1,7 @@
 m-chartV2 {
   display: block;
   position: relative;
-  margin-left: 40px;
+  // margin-left: 40px;
 }
 .js-plotly-plot,
 .plot-container {
