--- a/src/app/modules/wallet/v2/btc/btc.component.html
+++ b/src/app/modules/wallet/v2/btc/btc.component.html
@@ -1,4 +1,4 @@
-<div class="m-tabs__container">
+<div class="m-tabs__container" hidden>
   <li class="m-tabs__tab">
     <a routerLink="settings" routerLinkActive="selected">
       Settings
