--- a/src/app/modules/wallet/v2/tokens/transactions/transactions-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/transactions/transactions-tokens.component.html
@@ -3,48 +3,50 @@
     <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
   </div>
   <ng-container *ngIf="init">
-    <div class="m-walletTransactionsTable__wrapper">
-      <div class="m-walletTransactionsTable__row--top">
-        <div class="m-walletTransactionsTable__time">
+    <div class="m-walletTransactions__filter">
+      <m-dropdownSelector
+        *ngIf="transactions"
+        [filter]="filter"
+        [inlineLabel]="true"
+        (selectionMade)="filterSelected($event)"
+      >
+      </m-dropdownSelector>
+    </div>
+    <ng-template #firstRow>
+      <tr class="m-walletTransactionsTable__row--top">
+        <td class="m-walletTransactionsTable__row--date">
           Upcoming
-        </div>
-        <div
+        </td>
+        <td
           class="m-walletTransactionsTable__typeWrapper containsPopover"
+          style="position: relative"
           (mouseenter)="showRewardsPopup = true"
           (mouseleave)="showRewardsPopup = false"
         >
           <i class="material-icons">star_border</i
           ><span>Today's Daily Rewards</span>
-        </div>
-        <m-walletRewardsPopup
-          [timestamp]="startOfToday"
-          *ngIf="showRewardsPopup"
-        ></m-walletRewardsPopup>
-        <div class="m-walletTransactionsTable__filterWrapper">
-          <span>Transaction Type</span>
-          <m-dropdownSelector
-            *ngIf="transactions"
-            [filter]="filter"
-            [showLabel]="false"
-            (selectionMade)="filterSelected($event)"
-          ></m-dropdownSelector>
-        </div>
-      </div>
-      <ng-container *ngIf="transactions.length !== 0">
-        <m-walletTransactionsTable
-          currency="tokens"
-          [transactions]="transactions"
-          [filterApplied]="filterApplied"
-        >
-        </m-walletTransactionsTable>
-        <infinite-scroll
-          distance="25%"
-          (load)="loadTransactions(false)"
-          [moreData]="moreData"
-          [inProgress]="inProgress"
-        ></infinite-scroll>
-      </ng-container>
-    </div>
+          <m-walletRewardsPopup
+            [timestamp]="startOfToday"
+            *ngIf="showRewardsPopup"
+          ></m-walletRewardsPopup>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-container *ngIf="transactions.length !== 0">
+      <m-walletTransactionsTable
+        currency="tokens"
+        [transactions]="transactions"
+        [filterApplied]="filterApplied"
+      >
+        <ng-container *ngTemplateOutlet="firstRow"></ng-container>
+      </m-walletTransactionsTable>
+      <infinite-scroll
+        distance="25%"
+        (load)="loadTransactions(false)"
+        [moreData]="moreData"
+        [inProgress]="inProgress"
+      ></infinite-scroll>
+    </ng-container>
     <div
       class="m-walletTransactions__noTxNotice"
       *ngIf="transactions.length === 0"
