(fix): make toolbar items beautiful again

--- a/src/app/common/components/dropdown/dropdown.component.scss
+++ b/src/app/common/components/dropdown/dropdown.component.scss
@@ -47,8 +47,7 @@
     text-overflow: ellipsis;
     text-align: left;
 
-    a,
-    span {
+    a {
       text-decoration: none;
       width: 100%;
       font-weight: 400;
