--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
@@ -38,6 +38,12 @@ m-usermenu__v3 {
           color: #c3c5cb;
         }
 
+        span {
+          @include m-theme() {
+            color: themed($m-grey-700);
+          }
+        }
+
         &:not(.m-userMenuDropdown__username):not(.m-userMenuDropdown__spacer):not(.m-userMenuDropdown__footer):hover {
           @include m-theme() {
             background-color: themed($m-bgColor--primary);
