(fix): properly show verification banner for blogs (fix): don't show verification error message in red (fix): when there's an error, show the message vs the whole json

--- a/src/app/common/components/email-confirmation/email-confirmation.component.html
+++ b/src/app/common/components/email-confirmation/email-confirmation.component.html
@@ -3,6 +3,7 @@
     id="email-confirmation"
     [canClose]="canClose"
     [remember]="false"
+    #announcement
   >
     Please confirm your email address.
     <ng-container *ngIf="!sent"
