(fix): add grid-area and min-width styles to pro settings

--- a/src/app/modules/pro/settings/settings.component.scss
+++ b/src/app/modules/pro/settings/settings.component.scss
@@ -1,5 +1,9 @@
 m-proSettings {
   display: block;
+
+  grid-area: content / span 2;
+  min-width: 0;
+
   @include m-theme() {
     background-color: themed($m-white);
   }
