(fix): various fixes for new navigation

--- a/src/app/common/components/shadowbox-header-tabs/shadowbox-header-tabs.component.scss
+++ b/src/app/common/components/shadowbox-header-tabs/shadowbox-header-tabs.component.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   overflow: visible;
   @include m-theme() {
-    border-bottom: 8px solid themed($m-white);
+    border-bottom: 8px solid transparent;
   }
   @include m-theme() {
     color: themed($m-grey-300);
