--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -17,9 +17,11 @@
   <m-blockchain--wallet-address-notice></m-blockchain--wallet-address-notice>
 
   <ng-container *mIfFeature="'navigation'; else oldLayout">
-    <div class="m-grid" [class.m-grid__noSidebar]="!isSidebarVisible">
-      <m-sidebar--navigation></m-sidebar--navigation>
-      <router-outlet></router-outlet>
+    <div class="m-pageLayout__container" [class.m-pageLayout__container--noSidebar]="!isSidebarVisible">
+      <m-sidebar--navigation class="m-pageLayout__pane--left"></m-sidebar--navigation>
+      <div class="m-pageLayout__pane--main">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </ng-container>
   <ng-template #oldLayout>
