--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,34 +26,7 @@ m-app {
 
   m-body {
     @include m-theme() {
-      background-color: themed($m-body-bg);
-    }
-
-    & > .m-grid {
-      display: grid;
-
-      grid-template-areas: 'nav content side' 'footer footer footer';
-
-      grid-template-columns: 3fr 5fr 4fr;
-      grid-template-rows: 1fr;
-      grid-gap: 0;
-
-      height: 100%;
-
-      @media screen and (max-width: $m-grid-max-tablet) {
-        grid-template-columns: 71px 5fr 4fr;
-      }
-
-      @media screen and(max-width: $m-grid-max-mobile) {
-        display: flex;
-        flex-direction: column;
-      }
-
-      &.m-grid__noSidebar {
-        grid-template-areas: 'content side' 'footer footer';
-
-        grid-template-columns: 5fr 4fr;
-      }
+      background-color: themed($m-bgColor--primary);
     }
   }
 
