--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -14,6 +14,16 @@ body .m-theme--wrapper.m-theme--wrapper__dark {
   background-color: #080808;
 }
 
+// 2020 theme overrides
+body.m-theme__light.m-theme__2020,
+body.m-theme__2020 .m-theme--wrapper.m-theme--wrapper__light {
+  background-color: map-get(map-get($themes, 'light'), 'm-bgColor--primary');
+}
+body.m-theme__dark.m-theme__2020,
+body.m-theme__2020 .m-theme--wrapper.m-theme--wrapper__dark {
+  background-color: map-get(map-get($themes, 'dark'), 'm-bgColor--primary');
+}
+
 h1,
 h2,
 h3,
