--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -1,6 +1,7 @@
-<m-pageLayout>
-  <div class="m-walletDashboard" m-pageLayout__main *ngIf="tabs">
-    <m-dashboardLayout>
+<ng-template #layout>
+  <m-dashboardLayout>
+    <ng-container *mIfFeature="'navigation'; else header"></ng-container>
+    <ng-template #header>
       <ng-container m-dashboardLayout__header>
         <div>
           <h3>
@@ -8,25 +9,38 @@
           </h3>
         </div>
       </ng-container>
-      <ng-container m-dashboardLayout__body *ngIf="!tabs || inProgress">
-        <div *ngIf="!tabs" class="m-wallet__spinner">
-          <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+    </ng-template>
+    <ng-container m-dashboardLayout__body *ngIf="!tabs || inProgress">
+      <div *ngIf="!tabs" class="m-wallet__spinner">
+        <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+      </div>
+    </ng-container>
+    <ng-container m-dashboardLayout__body>
+      <m-shadowboxLayout>
+        <m-shadowboxHeader__tabs
+          class="m-shadowboxLayout__header"
+          [tabs]="tabs"
+          [activeTabId]="activeCurrencyId"
+          [friendlyVals]="true"
+          (tabChanged)="updateCurrency($event)"
+        ></m-shadowboxHeader__tabs>
+        <div class="m-shadowboxLayout__body">
+          <router-outlet></router-outlet>
         </div>
-      </ng-container>
-      <ng-container m-dashboardLayout__body>
-        <m-shadowboxLayout>
-          <m-shadowboxHeader__tabs
-            class="m-shadowboxLayout__header"
-            [tabs]="tabs"
-            [activeTabId]="activeCurrencyId"
-            [friendlyVals]="true"
-            (tabChanged)="updateCurrency($event)"
-          ></m-shadowboxHeader__tabs>
-          <div class="m-shadowboxLayout__body">
-            <router-outlet></router-outlet>
-          </div>
-        </m-shadowboxLayout>
-      </ng-container>
-    </m-dashboardLayout>
-  </div>
-</m-pageLayout>
+      </m-shadowboxLayout>
+    </ng-container>
+  </m-dashboardLayout>
+</ng-template>
+
+<ng-container *mIfFeature="'navigation'; else oldNav">
+   <ng-container *ngTemplateOutlet="layout"></ng-container>
+</ng-container>
+
+<ng-template #oldNav>
+  <m-pageLayout>
+    <div class="m-walletDashboard" m-pageLayout__main *ngIf="tabs">
+      <ng-container *ngTemplateOutlet="layout"></ng-container>
+    </div>
+  </m-pageLayout>
+<ng-template>
+
