--- a/src/app/modules/wallet/v2/dashboard.component.html
+++ b/src/app/modules/wallet/v2/dashboard.component.html
@@ -33,7 +33,7 @@
 </ng-template>
 
 <ng-container *mIfFeature="'navigation'; else oldNav">
-   <ng-container *ngTemplateOutlet="layout"></ng-container>
+  <ng-container *ngTemplateOutlet="layout"></ng-container>
 </ng-container>
 
 <ng-template #oldNav>
@@ -42,5 +42,5 @@
       <ng-container *ngTemplateOutlet="layout"></ng-container>
     </div>
   </m-pageLayout>
-<ng-template>
-
+  <ng-template> </ng-template
+></ng-template>
