--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -1,4 +1,8 @@
-<div class="m-sidebarNavigation__overlay" (click)="toggle()" *ngIf="false"></div>
+<div
+  class="m-sidebarNavigation__overlay"
+  (click)="toggle()"
+  *ngIf="false"
+></div>
 <div
   class="m-sidebarNavigation"
   [class.m-sidebarNavigation--slide]="layoutMode === 'phone'"
